--- a/refs.bib
+++ b/refs.bib
@@ -1,12 +1,97 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Mehdi Rezaie at 2022-09-01 11:49:14 -0400 
+%% Created for Mehdi Rezaie at 2022-09-12 14:07:38 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{slosar2008constraints,
+	author = {Slosar, An{\v{z}}e and Hirata, Christopher and Seljak, Uro{\v{s}} and Ho, Shirley and Padmanabhan, Nikhil},
+	date-added = {2022-09-12 14:07:27 -0400},
+	date-modified = {2022-09-12 14:07:27 -0400},
+	journal = {Journal of Cosmology and Astroparticle Physics},
+	number = {08},
+	pages = {031},
+	publisher = {IOP Publishing},
+	title = {Constraints on local primordial non-Gaussianity from large scale structure},
+	volume = {2008},
+	year = {2008}}
+
+@article{schlegel1998maps,
+	author = {Schlegel, David J and Finkbeiner, Douglas P and Davis, Marc},
+	date-added = {2022-09-12 12:40:36 -0400},
+	date-modified = {2022-09-12 12:40:36 -0400},
+	journal = {The Astrophysical Journal},
+	number = {2},
+	pages = {525},
+	publisher = {IOP Publishing},
+	title = {Maps of dust infrared emission for use in estimation of reddening and cosmic microwave background radiation foregrounds},
+	volume = {500},
+	year = {1998}}
+
+@article{gorski2005healpix,
+	author = {Gorski, Krzysztof M and Hivon, Eric and Banday, Anthony J and Wandelt, Benjamin D and Hansen, Frode K and Reinecke, Mstvos and Bartelmann, Matthia},
+	date-added = {2022-07-21 13:44:41 -0400},
+	date-modified = {2022-07-21 13:44:41 -0400},
+	journal = {The Astrophysical Journal},
+	number = {2},
+	pages = {759},
+	publisher = {IOP Publishing},
+	title = {HEALPix: A framework for high-resolution discretization and fast analysis of data distributed on the sphere},
+	volume = {622},
+	year = {2005}}
+
+@article{dey2018overview,
+	author = {Dey, Arjun and Schlegel, David J and Lang, Dustin and Blum, Robert and Burleigh, Kaylan and Fan, Xiaohui and Findlay, Joseph R and Finkbeiner, Doug and Herrera, David and Juneau, Stephanie and others},
+	date-added = {2022-07-21 13:25:25 -0400},
+	date-modified = {2022-07-21 13:25:25 -0400},
+	journal = {arXiv preprint arXiv:1804.08657},
+	title = {Overview of the DESI Legacy Imaging Surveys},
+	year = {2018}}
+
+@article{akrami2019planck,
+	author = {Akrami, Y and Arroja, F and Ashdown, M and Aumont, J and Baccigalupi, C and Ballardini, M and Banday, AJ and Barreiro, RB and Bartolo, N and Basak, S and others},
+	date-added = {2022-07-21 13:06:33 -0400},
+	date-modified = {2022-07-21 13:06:33 -0400},
+	journal = {arXiv preprint arXiv:1905.05697},
+	title = {Planck 2018 results. IX. Constraints on primordial non-Gaussianity},
+	year = {2019}}
+
+@article{pullen2013systematic,
+	author = {Pullen, Anthony R and Hirata, Christopher M},
+	date-added = {2022-07-21 13:03:47 -0400},
+	date-modified = {2022-07-21 13:03:47 -0400},
+	journal = {Publications of the Astronomical Society of the Pacific},
+	number = {928},
+	pages = {705},
+	publisher = {IOP Publishing},
+	title = {Systematic effects in large-scale angular power spectra of photometric quasars and implications for constraining primordial non-Gaussianity},
+	volume = {125},
+	year = {2013}}
+
+@article{Ho2015JCAP...05..040H,
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2015JCAP...05..040H},
+	archiveprefix = {arXiv},
+	author = {{Ho}, Shirley and {Agarwal}, Nishant and {Myers}, Adam D. and {Lyons}, Richard and {Disbrow}, Ashley and {Seo}, Hee-Jong and {Ross}, Ashley and {Hirata}, Christopher and {Padmanabhan}, Nikhil and {O'Connell}, Ross and {Huff}, Eric and {Schlegel}, David and {Slosar}, An{\v{z}}e and {Weinberg}, David and {Strauss}, Michael and {Ross}, Nicholas P. and {Schneider}, Donald P. and {Bahcall}, Neta and {Brinkmann}, J. and {Palanque-Delabrouille}, Nathalie and {Y{\`e}che}, Christophe},
+	date-added = {2022-07-21 13:03:43 -0400},
+	date-modified = {2022-07-21 13:03:43 -0400},
+	doi = {10.1088/1475-7516/2015/05/040},
+	eid = {040},
+	eprint = {1311.2597},
+	journal = {\jcap},
+	keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+	month = may,
+	number = {5},
+	pages = {040},
+	primaryclass = {astro-ph.CO},
+	title = {{Sloan Digital Sky Survey III photometric quasar clustering: probing the initial conditions of the Universe}},
+	volume = {2015},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1088/1475-7516/2015/05/040}}
 
 @article{dalal2008imprints,
 	author = {Dalal, Neal and Dore, Olivier and Huterer, Dragan and Shirokov, Alexander},
@@ -19,3 +104,35 @@
 	title = {Imprints of primordial non-Gaussianities on large-scale structure: Scale-dependent bias and abundance of virialized objects},
 	volume = {77},
 	year = {2008}}
+
+@article{komatsu2001acoustic,
+	author = {Komatsu, Eiichiro and Spergel, David N},
+	date-added = {2022-07-21 13:03:24 -0400},
+	date-modified = {2022-07-21 13:03:24 -0400},
+	journal = {Physical Review D},
+	number = {6},
+	pages = {063002},
+	publisher = {APS},
+	title = {Acoustic signatures in the primary microwave background bispectrum},
+	volume = {63},
+	year = {2001}}
+
+@article{weinberg2013observational,
+	author = {Weinberg, David H and Mortonson, Michael J and Eisenstein, Daniel J and Hirata, Christopher and Riess, Adam G and Rozo, Eduardo},
+	journal = {Physics reports},
+	number = {2},
+	pages = {87--255},
+	publisher = {Elsevier},
+	title = {Observational probes of cosmic acceleration},
+	volume = {530},
+	year = {2013}}
+
+@article{zhou2021clustering,
+	author = {Zhou, Rongpu and Newman, Jeffrey A and Mao, Yao-Yuan and Meisner, Aaron and Moustakas, John and Myers, Adam D and Prakash, Abhishek and Zentner, Andrew R and Brooks, David and Duan, Yutong and others},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	number = {3},
+	pages = {3309--3331},
+	publisher = {Oxford University Press},
+	title = {The clustering of DESI-like luminous red galaxies using photometric redshifts},
+	volume = {501},
+	year = {2021}}
