--- a/ms.tex
+++ b/ms.tex
@@ -1,22 +1,27 @@
 \documentclass[fleqn, usenatbib]{mnras}
-\usepackage{style}                                          % the settings are all here 
+\usepackage{style} % the settings are all here 
 
-\title[Fancy]{Fancy and Awesome Title}
+% The clustering of the SDSS-IV extended Baryon Oscillation Spectroscopic Survey DR16 'tracer' sample: XXXX (for tracer in ['luminous red galaxy', 'emission line galaxy', 'quasar']
+% see https://trac.sdss.org/wiki/eBOSS/QGC/DR16Recommandations
+\title[PNG with DESI Imaging]{Constraints on local primordial non-Gaussianity from the large-scale clustering of DESI Luminous Red Galaxies}
+
 \input{sections/authorlist}
 
-% Don't touch these lines
+% Don't change these lines
 \begin{document}
 \label{firstpage}
 \pagerange{\pageref{firstpage}--\pageref{lastpage}}
 \maketitle
 
 
+% clarify that the quasar catalog only includes standard sample
+% say we also perform z-dependent 
 \input{sections/abstract}
 
 % Select between one and six entries from the list of approved keywords.
 % Don't make up new ones.
 \begin{keywords}
-Awesome keywords: Perfect
+cosmology: inflation - large-scale structure of the Universe
 \end{keywords}
 
 
@@ -24,19 +29,21 @@ Awesome keywords: Perfect
 \input{sections/introduction}
 \input{sections/data}
 \input{sections/methodology}
-\input{sections/results}
-\input{sections/conclusion}
-\input{sections/acknowledgement}
-\input{sections/dataavailability}
+%\input{sections/results}
+%\input{sections/conclusion}
+%\input{sections/acknowledgement}
+%\input{sections/dataavailability}
 
 % references
 \bibliographystyle{mnras}
 \bibliography{refs} 
-\appendix
-\input{sections/extra}
+% \appendix
+% \input{sections/resultshighz}
 
 
 % % % Don't change these lines
 \bsp	% typesetting comment
 \label{lastpage}
+
 \end{document}
+% End of mnras_template.tex
