--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-Here is the abstract. Why should they read your paper. This could be longer.
+This paper uses the large-scale clustering of luminous red galaxies selected from the Dark Energy Spectroscopic Instrument Legacy Imaging Surveys Data Release 9 to constrain the local primordial non-Gaussianity (PNG) parameter $\fnl$. Using the angular power spectrum, we thoroughly investigate the impact of various photometric systematic effects, such as those caused by Galactic extinction and varying survey depth. Simulations are utilized to construct covariance matrices, evaluate the robustness of our pipeline, and perform statistical tests to assess whether spurious fluctuations are properly mitigated and calibrated. Using modes from $\ell=2$ to $300$, we find $X1 < \fnl < X2$ with our conservative and $X1 < \fnl < X2$ with extreme treatment of imaging systematics, both at 68\% confidence. While our results are consistent with zero PNG, but we show that the understanding of imaging systematics is of paramount importance to obtain unbiased constraints on $\fnl$.
 \end{abstract}
