--- a/sections/data.tex
+++ b/sections/data.tex
@@ -1,17 +1,37 @@
 \section{Data}
 \label{sec:data}
-This section explains the data. You may already know you could cite figures, see, e.g., Fig. \ref{fig:ng}.
-\begin{figure}
+Luminous red galaxies are massive galaxies that lack active star formation and considered as one of the highly biased tracers of large scale structure. They are widely targeted in previous galaxy surveys and their clustering and redshift properties are well known. We use the photometric DESI Luminous Red Galaxies (LRG), selected from the imaging surveys \citep{dey2018overview} using color cuts described in the $g$, $r$, $z$, and $W1$ bands \citep[see,][]{zhou2021clustering}, and summarized in Tab. \ref{tab:ts}. The LRG sample are masked for bright stars and foreground bright galaxies and clusters of galaxies\footnote{See \url{https://www.legacysurvey.org/dr9/bitmasks/}}, and then binned into HEALPix \citep{gorski2005healpix} at $\textsc{nside}=256$ to construct the LRG density field, with an average density of $800$ deg$^{-2}$ with a coverage around $14000$ square degrees of the sky, as shown in Fig. \ref{fig:ng}. The density map is accounted for pixel incompleteness using a catalog of random points with the similar cuts and masks as the LRG sample. 
+
+We study the correlation between target density field and potential sources of systematic error, mapped into HEALPix similar to the data. The maps considered in this study are stellar density from \mr{Myers et al. (2022)} from Gaia,  Galactic extinction E[B-V] from \cite{schlegel1998maps}, and other systematics properties including survey depth (galaxy depth in grz and PSF depth in W1) and seeing in grz from DESI imaging. Fig. \ref{fig:pcc} shows the Spearman correlation between galaxy density and imaging properties. 
+
+%Explain the target selection and sample. What bands are used for selection, total area, and maybe their redshift distribution from spectroscopy, and their inferred halo bias. Bitmasks applied based on . SV3 LRG Selection with 800 per sq. deg. Target selection of DESI LRGs is presented in XXX. The selection uses imaging in XXX optical and YY infrared bands (see, e.g., ZZZ). Density of DESI LRGs in deg$^{-2}$ is shown in Fig. \ref{fig:lrgdens}.
+
+\begin{figure*}
     \centering
-    \includegraphics[width=0.45\textwidth]{figures/nlrg.pdf}
-    \caption{Observed density field of DESI Luminous Red Galaxies DR9 in deg$^{-2}$}
+    \includegraphics[width=0.9\textwidth]{figures/lrgdens.pdf}
+    \caption{Observed density field of DESI Luminous Red Galaxies DR9 in deg$^{-2}$.}
     \label{fig:ng}
+\end{figure*}
+
+\begin{figure}
+    \includegraphics[width=0.45\textwidth]{figures/pcc.pdf} 
+    \caption{Spearman correlation coefficient between galaxy density and imaging properties.}
+    \label{fig:pcc}
 \end{figure}
 
-And this is a table for you!
-\begin{table}
+Fig. \ref{fig:nz} shows the redshift distribution of LRGs and the halo bias as a function of redshift. 
+
+%\begin{figure}
+%    \centering
+%    \includegraphics[width=0.45\textwidth]{figures/nz_lrg.pdf}
+%    \caption{Redshift distribution and linear bias of the DESI Luminous Red Galaxies.}
+%    \label{fig:nz}
+%\end{figure}
+
+
+\begin{table*}
   \begin{center}
-    \caption{What about a table}
+    \caption{Selection criteria for the LRG targets.}
     \label{tab:ts}
     \begin{tabular}{lc}
     \hline
@@ -20,15 +40,15 @@ And this is a table for you!
      \textbf{DECaLS} & \\ 
      $z_{\rm fiber} < 21.7$  & faint limit  \\
      $z - W1 > 0.8 \times (r - z) - 0.6$ & Stellar rejection  \\
-     $[(g-r >1.3)$ & Remove low-z galaxies \\
-     $[(r-W1 > (W1 - 17.26)*1.8)$ & Luminosity cut \\ 
+     $[(g-r >1.3)~{\rm AND}~((g-r) > -1.55*(r-W1) + 3.13)]~{\rm OR}~(r -W 1 > 1.8)$ & Remove low-z galaxies \\
+     $[(r-W1 > (W1 - 17.26)*1.8)~{\rm AND}~(r - W1 > W1 - 16.36)]~{\rm OR}~(r-W1 > 3.29)$ & Luminosity cut \\ 
     \hline
      \textbf{BASS+MzLS} & \\ 
      $z_{\rm fiber} < 21.71$  & faint limit  \\
      $z - W1 > 0.8 \times (r - z) - 0.6$ & Stellar rejection  \\
-     $[(g-r >1.34)$ & Remove low-z galaxies \\
-     $[(r-W1 > (W1 - 17.24)*1.83)$ & Luminosity cut \\ 
+     $[(g-r >1.34)~{\rm AND}~((g-r) > -1.55*(r-W1) + 3.23)]~{\rm OR}~(r -W 1 > 1.8)$ & Remove low-z galaxies \\
+     $[(r-W1 > (W1 - 17.24)*1.83)~{\rm AND}~(r - W1 > W1 - 16.33)]~{\rm OR}~(r-W1 > 3.39)$ & Luminosity cut \\ 
       \hline
       \end{tabular}
   \end{center}
-\end{table}
+\end{table*}
