--- a/sections/dataavailability.tex
+++ b/sections/dataavailability.tex
@@ -1,4 +1,4 @@
 \section*{Data Availability}
 \label{sec:dataavail}
 
-Instruct how data used in this work can be accessed.
+The catalogue described in this article will be made public in Github at \url{https://github.com/mehdirezaie/eBOSSDR16QSOE}. The neural network pipeline utilized in this work is publicly available at \url{https://github.com/mehdirezaie/sysnetdev}.
