--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,12 +1,14 @@
 \section{Introduction}
 \label{sec:introduction}
-Here you will present introduction with some equations, e.g., one from \cite{dalal2008imprints}:
+Current observations of the cosmic microwave background, large-scale structure, and supernovae are explained by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion known as \textit{inflation} \citep[see, e.g.,][]{weinberg2013observational}. At the end of inflation, the universe was reheated and primordial fluctuations are created to seed the subsequent growth of structure. Statistical properties of primordial fluctuations still remain as one of the unsolved puzzles in modern observational cosmology. Analyses of cosmological data have revealed that initial conditions of the universe are consistent with Gaussian fluctuations; however, there are some classes of models that predict some levels of non-Gaussianities in the primordial gravitational field.
+
+Primordial non-Gaussianity of the local type is parameterized by \cite{komatsu2001acoustic},
+
 \begin{equation}
     \Phi = \phi + \fnl (\phi^{2}- <\phi^{2}>),
-\end{equation}.
+\end{equation}
+where $\phi$ represents the primordial gravitational field and $\fnl$ is the coefficient of the nonlinear correction to the primordial field. The most stringest constraints on $\fnl$ comes from the three-point statistics of the CMB temperature anisotropies, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. However, it has been shown that PNG has a scale-dependent signature on the two-point clustering of biased tracers of dark matter gravitational field. The clustering of biased tracers is boosted on large scales by a scale-dependent shift proportional to $k^{-2}$ \citep[see,][]{dalal2008imprints}.
 
-and some random text from internet, \url{https://randomtextgenerator.com}. In no impression assistance contrasted. Manners she wishing justice hastily new anxious. At discovery discourse departure objection we. Few extensive add delighted tolerably sincerity her. Law ought him least enjoy decay one quick court. Expect warmly its tended garden him esteem had remove off. Effects dearest staying now sixteen nor improve.  Is allowance instantly strangers applauded discourse so. Separate entrance welcomed sensible laughing why one moderate shy. We seeing piqued garden he. As in merry at forth least ye stood. And cold sons yet with. Delivered middleton therefore me at. Attachment companions man way excellence how her pianoforte.  Old education him departure any arranging one prevailed. Their end whole might began her. Behaved the comfort another fifteen eat. Partiality had his themselves ask pianoforte increasing discovered. So mr delay at since place whole above miles. He to observe conduct at detract because. Way ham unwilling not breakfast furniture explained perpetual. Or mr surrounded conviction so astonished literature. Songs to an blush woman be sorry young. We certain as removal attempt. Savings her pleased are several started females met. Short her not among being any. Thing of judge fruit charm views do. Miles mr an forty along as he. She education get middleton day agreement performed preserved unwilling. Do however as pleased offence outward beloved by present. By outward neither he so covered amiable greater. Juvenile proposal betrayed he an informed weddings followed. Precaution day see imprudence sympathize principles. At full leaf give quit to in they up. Now led tedious shy lasting females off. Dashwood marianne in of entrance be on wondered possible building. Wondered sociable he carriage in speedily margaret. Up devonshire of he thoroughly insensible alteration. An mr settling occasion insisted distance ladyship so. Not attention say frankness intention out dashwoods now curiosity. Stronger ecstatic as no judgment daughter speedily thoughts. Worse downs nor might she court did nay forth these.  
+Previous studies of $\fnl$ with galaxy and quasar clustering have been hindered dramatically by spurious fluctuations in target density, which are due to the variation of imaging properties across the sky \citep{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS DRX does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and select faint targets. Assuming imaging systematics are under control, the next generation of galaxy surveys such as DESI and the Rubin Observatory are forecast to yield unprecedented constraints on $\fnl$. Combined with CMB data, the limits can be enhanced to a precision level required to differentiate between single and multi-field inflationary models.
 
-Written enquire painful ye to offices forming it. Then so does over sent dull on. Likewise offended humoured mrs fat trifling answered. On ye position greatest so desirous. So wound stood guest weeks no terms up ought. By so these am so rapid blush songs begin. Nor but mean time one over. Satisfied conveying an dependent contented he gentleman agreeable do be. Warrant private blushes removed an in equally totally if. Delivered dejection necessary objection do mr prevailed. Mr feeling do chiefly cordial in do. Water timed folly right aware if oh truth. Imprudence attachment him his for sympathize. Large above be to means. Dashwood do provided stronger is. But discretion frequently sir the she instrument unaffected admiration everything. Do so written as raising parlors spirits mr elderly. Made late in of high left hold. Carried females of up highest calling. Limits marked led silent dining her she far. Sir but elegance marriage dwelling likewise position old pleasure men. Dissimilar themselves simplicity no of contrasted as. Delay great day hours men. Stuff front to do allow to asked he. Dwelling and speedily ignorant any steepest. Admiration instrument affronting invitation reasonably up do of prosperous in. Shy saw declared age debating ecstatic man. Call in so want pure rank am dear were. Remarkably to continuing in surrounded diminution on. In unfeeling existence objection immediate repulsive on he in. Imprudence comparison uncommonly me he difficulty diminution resolution. Likewise proposal differed scarcely dwelling as on raillery. September few dependent extremity own continued and ten prevailed attending. Early to weeks we could. Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources. 
-
-You could also reference difference sections. In section \S \ref{sec:data}, we present awesome text generated from the internet.
+In this paper, we use photometric galaxies and quasars from the DESI Legacy Imaging Surveys Data Release 9 to constrain the primordial non-Gaussianity parameter $\fnl$, while marginalizing over bias and shotnoise parameters. We make use of spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross correlate target density fields with the templates of imaging systematics to quantify systematic error and assess the effectiveness of systematics treatments and the significance of residual systematic error. The methodologies and statistical tools presented in this work will pave the path for future imaging surveys. 
