--- a/ms.tex
+++ b/ms.tex
@@ -1,8 +1,6 @@
 \documentclass[fleqn, usenatbib]{mnras}
 \usepackage{style} % the settings are all here 
 
-% The clustering of the SDSS-IV extended Baryon Oscillation Spectroscopic Survey DR16 'tracer' sample: XXXX (for tracer in ['luminous red galaxy', 'emission line galaxy', 'quasar']
-% see https://trac.sdss.org/wiki/eBOSS/QGC/DR16Recommandations
 \title[PNG with DESI Imaging]{Constraints on local primordial non-Gaussianity from the large-scale clustering of DESI Luminous Red Galaxies}
 
 \input{sections/authorlist}
@@ -14,8 +12,6 @@
 \maketitle
 
 
-% clarify that the quasar catalog only includes standard sample
-% say we also perform z-dependent 
 \input{sections/abstract}
 
 % Select between one and six entries from the list of approved keywords.
@@ -29,16 +25,15 @@ cosmology: inflation - large-scale structure of the Universe
 \input{sections/introduction}
 \input{sections/data}
 \input{sections/methodology}
-%\input{sections/results}
-%\input{sections/conclusion}
-%\input{sections/acknowledgement}
-%\input{sections/dataavailability}
+\input{sections/results}
+\input{sections/conclusion}
+\input{sections/acknowledgement}
+\input{sections/dataavailability}
 
 % references
 \bibliographystyle{mnras}
 \bibliography{refs} 
-% \appendix
-% \input{sections/resultshighz}
+%\appendix
 
 
 % % % Don't change these lines
