--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,29 +1,29 @@
 \section{Conclusion}\label{sec:conclusion}
-We have performed a thorough study of imaging systematic effects and various template-based mitigation techniques in the final sample of quasars \citep{lyke2020dr16qso, ross2020lss} from the eBOSS DR16 \citep{Ahumada2020ApJS}. We present a nonlinear cleaning approach, based on artificial neural networks, and compare the treatment effectiveness with the standard method, based on linear regression. The methods are applied to model the observed density of quasars given a set of templates for imaging properties, related to SDSS properties and Galactic foregrounds, which include stellar density, Galactic extinction, neutral hydrogen column density, depth, seeing, sky brightness, airmass, and run. As summarized in Tab. \ref{tab:chi2methods},
-\begin{enumerate}[leftmargin=1\parindent]
-    \item We find that the neural network-based approach outperforms standard linear regression by allowing more freedom for correcting nonlinear and complex variations in the quasar density caused by imaging properties, see Fig. \ref{fig:nbarmethods} and \ref{fig:data_nbar}. The approach is also further improved by using the Poisson statistics to account for the sparsity of the DR16 sample.
-    
-    \item Stellar density is one of the most important sources of spurious fluctuations, and a new template constructed using the Gaia DR2 \citep{gaia2018} yields the best agreement to the observed chi-squared values in the simulations, see Fig. \ref{fig:nbarnstar} and Tab. \ref{tab:chi2methods}. We also show that linear treatment, with the Gaia map included, is still not able to properly remove systematics.
-    
-    \item We find no evidence for redshift-dependent imaging systematics and no substantial difference after changing the pixel resolution of imaging templates, see Fig. \ref{fig:nbarsplit}. Therefore we choose NN trained with PNLL, cyclic learning, and imaging templates in $\nside=512$ as our default approach.
-    
-\end{enumerate}
-
-We utilize the EZmocks, both in the presence and absence of imaging systematics, to construct covariance matrices, quantify residual systematic error, and assess the quality of the DR16 sample for cosmological studies. We find
-\begin{enumerate}[resume, leftmargin=1\parindent]
-
-    \item The mean density null test shows some remaining systematic error in the catalogue with the standard weights in the NGC region, specifically $\chi^{2}=218.1$ with $p{\rm -value}=0.2\%$. Although this test does not reveal any issues with the standard catalogue in the SGC region, $\chi^{2}=132.5$ with $p{\rm -value}=65.0\%$ (see Tab. \ref{tab:chi2_nbar}), our second null test based on cross-power spectra unveils a significant systematic error in the SGC, $\chi^{2}=404.3$ with $p{\rm -value}=0.7\%$.
-    
-    \item This work motivates further investigations of linear systematic treatment methods in future galaxy surveys since the 1D diagnostic based on the mean density contrast does not indicate any issues with the standard treatment in the SGC (see Fig. \ref{fig:chi2_nbar}).
-    
-    \item The catalogue with the neural network-based systematic weights passes both null tests by providing substantially lower $\chi^{2}$ values, see Fig. \ref{fig:chi2_nbar} and \ref{fig:chi2_cell}.
-    
-\end{enumerate}
-
-Collectively, these tests demonstrate that the DR16 quasar catalogue with the standard systematic weights suffer from residual imaging systematics in both Galactic caps, and should not be used for measuring quasar clustering on large scales, i.e., $k < 0.01~h/{\rm Mpc}$, as shown in Fig. \ref{fig:p0data}. Nevertheless, it is expected that the impact of imaging systematics to be insignificant on the BAO measurements \citep[e.g., analyses presented in ][]{hou2020qso, neveux2020qso}, and a thorough investigation is conducted in a companion paper \citep{merz2020bao}.
-
-We then apply our methods on the EZmocks to quantify the impact of systematics treatment on quasar clustering measurements, see Fig. \ref{fig:p0mocks}. The neural-network treatment removes some of the cosmological power due to allowing for more freedom in removing systematic effects. We find that the impacts of overfitting on the mean of the mock power spectra and its error are marginal for $k > 0.004~h/{\rm Mpc}$. We employ linear regression to model the impact of mitigation on recovering the ground truth clustering, see Fig. \ref{fig:dpvsp}. We emphasize that the utility of the mitigation bias treatment is not clear since the parameters are derived from the mocks without realistic imaging systematics, see Fig. \ref{fig:chi2_nbar} and \ref{fig:chi2_cell}. However, we investigate the effect on primordial non-Gaussianity constraints in a companion paper \citep{mueller2020fnl}.
-
-
-The end-product from this work is a new value-added quasar catalogue with the enhanced weights to correct for nonlinear imaging systematic effects. The new weights are necessary to make a robust measurement of quasar clustering on large scales ($k < 0.01~h/{\rm Mpc}$). This catalogue is used in a companion paper constraining the local-type primordial non-Gaussianity \citep{mueller2020fnl}.
+%We have performed a thorough study of imaging systematic effects and various template-based mitigation techniques in the final sample of quasars \citep{lyke2020dr16qso, ross2020lss} from the eBOSS DR16 \citep{Ahumada2020ApJS}. We present a nonlinear cleaning approach, based on artificial neural networks, and compare the treatment effectiveness with the standard method, based on linear regression. The methods are applied to model the observed density of quasars given a set of templates for imaging properties, related to SDSS properties and Galactic foregrounds, which include stellar density, Galactic extinction, neutral hydrogen column density, depth, seeing, sky brightness, airmass, and run. As summarized in Tab. \ref{tab:chi2methods},
+%\begin{enumerate}[leftmargin=1\parindent]
+%    \item We find that the neural network-based approach outperforms standard linear regression by allowing more freedom for correcting nonlinear and complex variations in the quasar density caused by imaging properties, see Fig. \ref{fig:nbarmethods} and \ref{fig:data_nbar}. The approach is also further improved by using the Poisson statistics to account for the sparsity of the DR16 sample.
+%    
+%    \item Stellar density is one of the most important sources of spurious fluctuations, and a new template constructed using the Gaia DR2 \citep{gaia2018} yields the best agreement to the observed chi-squared values in the simulations, see Fig. \ref{fig:nbarnstar} and Tab. \ref{tab:chi2methods}. We also show that linear treatment, with the Gaia map included, is still not able to properly remove systematics.
+%    
+%    \item We find no evidence for redshift-dependent imaging systematics and no substantial difference after changing the pixel resolution of imaging templates, see Fig. \ref{fig:nbarsplit}. Therefore we choose NN trained with PNLL, cyclic learning, and imaging templates in $\nside=512$ as our default approach.
+%    
+%\end{enumerate}
+%
+%We utilize the EZmocks, both in the presence and absence of imaging systematics, to construct covariance matrices, quantify residual systematic error, and assess the quality of the DR16 sample for cosmological studies. We find
+%\begin{enumerate}[resume, leftmargin=1\parindent]
+%
+%    \item The mean density null test shows some remaining systematic error in the catalogue with the standard weights in the NGC region, specifically $\chi^{2}=218.1$ with $p{\rm -value}=0.2\%$. Although this test does not reveal any issues with the standard catalogue in the SGC region, $\chi^{2}=132.5$ with $p{\rm -value}=65.0\%$ (see Tab. \ref{tab:chi2_nbar}), our second null test based on cross-power spectra unveils a significant systematic error in the SGC, $\chi^{2}=404.3$ with $p{\rm -value}=0.7\%$.
+%    
+%    \item This work motivates further investigations of linear systematic treatment methods in future galaxy surveys since the 1D diagnostic based on the mean density contrast does not indicate any issues with the standard treatment in the SGC (see Fig. \ref{fig:chi2_nbar}).
+%    
+%    \item The catalogue with the neural network-based systematic weights passes both null tests by providing substantially lower $\chi^{2}$ values, see Fig. \ref{fig:chi2_nbar} and \ref{fig:chi2_cell}.
+%    
+%\end{enumerate}
+%
+%Collectively, these tests demonstrate that the DR16 quasar catalogue with the standard systematic weights suffer from residual imaging systematics in both Galactic caps, and should not be used for measuring quasar clustering on large scales, i.e., $k < 0.01~h/{\rm Mpc}$, as shown in Fig. \ref{fig:p0data}. Nevertheless, it is expected that the impact of imaging systematics to be insignificant on the BAO measurements \citep[e.g., analyses presented in ][]{hou2020qso, neveux2020qso}, and a thorough investigation is conducted in a companion paper \citep{merz2020bao}.
+%
+%We then apply our methods on the EZmocks to quantify the impact of systematics treatment on quasar clustering measurements, see Fig. \ref{fig:p0mocks}. The neural-network treatment removes some of the cosmological power due to allowing for more freedom in removing systematic effects. We find that the impacts of overfitting on the mean of the mock power spectra and its error are marginal for $k > 0.004~h/{\rm Mpc}$. We employ linear regression to model the impact of mitigation on recovering the ground truth clustering, see Fig. \ref{fig:dpvsp}. We emphasize that the utility of the mitigation bias treatment is not clear since the parameters are derived from the mocks without realistic imaging systematics, see Fig. \ref{fig:chi2_nbar} and \ref{fig:chi2_cell}. However, we investigate the effect on primordial non-Gaussianity constraints in a companion paper \citep{mueller2020fnl}.
+%
+%
+%The end-product from this work is a new value-added quasar catalogue with the enhanced weights to correct for nonlinear imaging systematic effects. The new weights are necessary to make a robust measurement of quasar clustering on large scales ($k < 0.01~h/{\rm Mpc}$). This catalogue is used in a companion paper constraining the local-type primordial non-Gaussianity \citep{mueller2020fnl}.
 
